[package]
version = "0.0.1"
edition = "2021"
name = "process_executor"
authors = ["Pants Build <pantsbuild@gmail.com>"]
publish = false

[dependencies]
protos = { path = "../protos" }
clap = { workspace = true, features = ["derive"] }
dirs-next = { workspace = true }
env_logger = { workspace = true }
fs = { path = "../fs" }
futures = { workspace = true }
grpc_util = { path = "../grpc_util" }
hashing = { path = "../hashing" }
log = { workspace = true }
process_execution = { path = "../process_execution" }
prost = { workspace = true }
shlex = { workspace = true }
store = { path = "../fs/store" }
task_executor = { path = "../task_executor" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
workunit_store = { path = "../workunit_store" }
remote = { path = "../process_execution/remote" }

[lints]
workspace = true
