[package]
version = "0.0.1"
edition = "2021"
name = "task_executor"
authors = ["Pants Build <pantsbuild@gmail.com>"]
publish = false

[dependencies]
futures = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
stdio = { path = "../stdio" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
workunit_store = { path = "../workunit_store" }

[lints]
workspace = true
