[package]
version = "0.0.1"
edition = "2021"
name = "async_latch"
authors = [ "Pants Build <pantsbuild@gmail.com>" ]
publish = false

[dependencies]
parking_lot = "0.12"
tokio = { version = "1.21", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.21", features = ["rt", "macros", "time"] }
