[package]
version = "0.0.1"
edition = "2018"
name = "async_semaphore"
authors = [ "Pants Build <pantsbuild@gmail.com>" ]
publish = false

[dependencies]
futures = "0.3"
log = "0.4"
parking_lot = "0.6"

[dev-dependencies]
tokio = { git = "https://github.com/tokio-rs/tokio", rev = "a5c87981077a784b2adebe7cf27267cef6ec9fac", features = ["rt-core", "macros", "time"] }
