[package]
version = "0.0.1"
edition = "2018"
name = "async_semaphore"
authors = [ "Pants Build <pantsbuild@gmail.com>" ]
publish = false

[dependencies]
parking_lot = "0.11"
tokio = { version = "^1.4", features = ["sync"] }

[dev-dependencies]
futures = "0.3"
tokio = { version = "^1.4", features = ["rt", "macros", "time"] }
