[package]
version = "0.0.1"
edition = "2021"
name = "async_value"
authors = ["Pants Build <pantsbuild@gmail.com>"]
publish = false

[dependencies]
futures = "0.3"
tokio = { version = "1.28", features = ["macros", "sync"] }

[dev-dependencies]
tokio = { version = "1.28", features = ["macros", "rt", "sync", "time"] }
