[package]
version = "0.0.1"
edition = "2021"
name = "async_value"
authors = ["Pants Build <pantsbuild@gmail.com>"]
publish = false

[dependencies]
futures = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
