[package]
version = "0.0.1"
edition = "2018"
name = "boxfuture"
authors = [
  "Pants Build <pantsbuild@gmail.com>",
  "Daniel Wagner-Hall <dawagner@gmail.com>",
]
description = "Utilities to make Futures easier to pass around, by boxing without having to wrap calls in Box::new(), and early returning them."
repository = "https://github.com/pantsbuild/pants/tree/master/src/rust/engine/boxfuture"
license = "Apache-2.0"

[dependencies]
futures01 = { package = "futures", version = "0.1" }
