[package]
version = "0.0.1"
edition = "2021"
name = "client"
authors = ["Pants Build <pantsbuild@gmail.com>"]
publish = false

[[bin]]
name = "pants"
path = "src/main.rs"

[dependencies]
env_logger = { workspace = true }
futures = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
nailgun = { path = "../nailgun" }
nix = { workspace = true }
options = { path = "../options" }
sha2 = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
sysinfo = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-std", "io-util"] }
uname = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
