[package]
version = "0.0.1"
edition = "2021"
name = "client"
authors = [ "Pants Build <pantsbuild@gmail.com>" ]
publish = false

[[bin]]
name = "pants"
path = "src/main.rs"

[dependencies]
env_logger = "0.10.0"
log = "0.4"
nailgun = { path = "../nailgun" }
nix = "0.25"
options = { path = "../options" }
pantsd = { path = "../pantsd" }
strum = "0.24"
strum_macros = "0.24"
tokio = { version = "1.28", features = ["rt-multi-thread", "macros", "net", "io-std", "io-util"] }
