[package]
version = "0.0.1"
edition = "2021"
authors = ["Pants Build <pantsbuild@gmail.com>"]
name = "concrete_time"
publish = false

[dependencies]
deepsize = { workspace = true }
log = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
