[package]
version = "2.18.0"
edition = "2021"
name = "dep_inference"
authors = ["Pants Build <pantsbuild@gmail.com>"]
publish = false

[build-dependencies]
hex = { workspace = true }
sha2 = { workspace = true }
walkdir = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-python = { workspace = true }

[dependencies]
fnv = { workspace = true }
protos = { path = "../protos" }
serde = { workspace = true }
serde_derive = { workspace = true }
itertools = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-python = { workspace = true }
