[package]
version = "0.0.1"
edition = "2018"
name = "engine_cffi"
authors = [ "Pants Build <pantsbuild@gmail.com>" ]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
cpython = { version = "0.5", features = ["extension-module"] }
engine = { path = ".." }
futures01 = { package = "futures", version = "0.1" }
futures = { version = "0.3", features = ["compat"] }
hashing = { path = "../hashing" }
log = "0.4"
logging = { path = "../logging" }
nailgun = { path = "../nailgun" }
task_executor = { path = "../task_executor" }
rule_graph = { path = "../rule_graph" }
store = { path = "../fs/store" }
tar_api = { path = "../tar_api" }
tempfile = "3"
tokio = { version = "0.2", features = ["rt-threaded"] }
workunit_store = { path = "../workunit_store" }
