[package]
version = "0.0.1"
edition = "2018"
name = "engine_pyo3"
authors = [ "Pants Build <pantsbuild@gmail.com>" ]
publish = false

[dependencies]
fs = { path = "../fs" }
hashing = { path = "../hashing" }
nailgun = { path = "../nailgun" }
parking_lot = "0.11"
pyo3 = "0.14.1"
store = { path = "../fs/store" }
task_executor = { path = "../task_executor" }
testutil_mock = { package = "mock", path = "../testutil/mock" }
workunit_store = { path = "../workunit_store" }
