[package]
version = "0.0.1"
edition = "2021"
name = "fs"
authors = [ "Pants Build <pantsbuild@gmail.com>" ]
publish = false

[dependencies]
# Pin async-trait due to https://github.com/dtolnay/async-trait/issues/144.
async-trait = "=0.1.42"
bytes = "1.0"
dirs-next = "2"
futures = "0.3"
glob = "0.3.0"
hashing = { path = "../hashing" }
ignore = "0.4.11"
lazy_static = "1"
log = "0.4"
parking_lot = "0.12"
rlimit = "0.3"
serde = "1.0.104"
task_executor = { path = "../task_executor" }

[dev-dependencies]
tempfile = "3"
testutil = { path = "../testutil" }
tokio = { version = "1.16", features = ["rt", "macros"] }
