[package]
version = "0.0.1"
edition = "2021"
name = "fs"
authors = [ "Pants Build <pantsbuild@gmail.com>" ]
publish = false

[dependencies]
async-trait = "0.1"
bytes = "1.2"
# TODO: Waiting on https://github.com/Aeledfyr/deepsize/pull/{30,31,32}.
deepsize = { git = "https://github.com/stuhood/deepsize.git", rev = "5c8bee5443fcafe4aaa9274490d354412d0955c1" }
dirs-next = "2"
futures = "0.3"
glob = "0.3.0"
grpc_util = { path = "../grpc_util" }
hashing = { path = "../hashing" }
# TODO: Waiting on https://github.com/BurntSushi/ripgrep/pull/2482.
ignore = { git = "https://github.com/pantsbuild/ripgrep.git", rev = "0f7e0fdd00ae528745a7fea24a320cae98235341" }
internment = "0.6"
itertools = "0.10"
lazy_static = "1"
log = "0.4"
parking_lot = "0.12"
protos = { path = "../protos" }
rlimit = "0.8"
serde = "1.0.136"
task_executor = { path = "../task_executor" }
tokio = { version = "1.21", features = ["fs"] }
workunit_store = { path = "../workunit_store" }

[dev-dependencies]
tempfile = "3"
testutil = { path = "../testutil" }
tokio = { version = "1.21", features = ["rt", "macros"] }
