[package]
version = "0.0.1"
edition = "2021"
name = "fs"
authors = ["Pants Build <pantsbuild@gmail.com>"]
publish = false

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
deepsize = { workspace = true }
dirs-next = { workspace = true }
futures = { workspace = true }
glob = { workspace = true }
grpc_util = { path = "../grpc_util" }
hashing = { path = "../hashing" }
# TODO: Waiting on https://github.com/BurntSushi/ripgrep/pull/2482.
ignore = { workspace = true }
internment = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
protos = { path = "../protos" }
rlimit = { workspace = true }
serde = { workspace = true }
task_executor = { path = "../task_executor" }
tokio = { workspace = true, features = ["fs"] }
workunit_store = { path = "../workunit_store" }

[dev-dependencies]
tempfile = { workspace = true }
testutil = { path = "../testutil" }
tokio = { workspace = true, features = ["rt", "macros"] }
