[package]
version = "0.0.1"
edition = "2021"
name = "graph"
authors = [ "Pants Build <pantsbuild@gmail.com>" ]
publish = false

[dependencies]
# Pin async-trait due to https://github.com/dtolnay/async-trait/issues/144.
async-trait = "=0.1.42"
async_value = { path = "../async_value" }
fnv = "1.0.5"
futures = "0.3"
fixedbitset = "0.2"
log = "0.4"
parking_lot = "0.12"
petgraph = "0.5"
task_executor = { path = "../task_executor" }
tokio = { version = "1.16", features = ["time", "parking_lot"] }

[dev-dependencies]
rand = "0.8"
env_logger = "0.5.4"
tokio = { version = "1.16", features = ["macros", "rt-multi-thread", "time"] }
