[package]
version = "0.0.1"
edition = "2021"
name = "graph"
authors = [ "Pants Build <pantsbuild@gmail.com>" ]
publish = false

[dependencies]
async-trait = "0.1"
async_value = { path = "../async_value" }
fnv = "1.0.5"
futures = "0.3"
fixedbitset = "0.4"
log = "0.4"
parking_lot = "0.12"
petgraph = "0.6"
task_executor = { path = "../task_executor" }
tokio = { version = "1.21", features = ["time", "parking_lot"] }

[dev-dependencies]
rand = "0.8"
env_logger = "0.10.0"
tokio = { version = "1.21", features = ["macros", "rt-multi-thread", "time"] }
