[package]
version = "0.0.1"
edition = "2021"
name = "grpc_util"
authors = ["Pants Build <pantsbuild@gmail.com>"]
publish = false

[dependencies]
bytes = { workspace = true }
either = { workspace = true }
futures = { workspace = true }
hyper = { workspace = true }
hyper-rustls = { version = "0.24", features = ["http2"] }
http = { workspace = true }
http-body = { workspace = true }
itertools = { workspace = true }
rustls-native-certs = { workspace = true }
lazy_static = { workspace = true }
pin-project = { workspace = true }
pin-project-lite = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
rustls = { version = "0.21.1", features = ["dangerous_configuration", 'logging'] }
rustls-pemfile = { workspace = true }
tokio = { workspace = true, features = ["net", "process", "rt-multi-thread", "sync", "time"] }
tokio-rustls = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
tonic = { workspace = true, features = ["transport", "codegen", "tls", "tls-roots", "prost"] }
tower = { version = "0.4", features = ["limit"] }
tower-layer = { workspace = true }
tower-service = { workspace = true }
webpki = { workspace = true }
workunit_store = { path = "../workunit_store" }

[dev-dependencies]
axum = "0.6"
axum-server = { version = "0.5", features = ["tls-rustls"] }
async-trait = "0.1"
parking_lot = "0.11"
prost-types = "0.11"

[build-dependencies]
prost-build = "0.11"
tonic-build = "0.9"
